--- a/Ajuda.css
+++ b/Ajuda.css
@@ -3,12 +3,23 @@
     padding: 0px;
 }
 
+.chat {
+    position: fixed;
+    bottom: 250px; /* distância do fundo */
+    right: 20px; /* distância da direita */
+    z-index: 1000; /* para garantir que o ícone fique acima do conteúdo */
+}
 
 
+#toggleLink{
+    color: blue;
+    text-decoration: underline;
+    cursor: pointer;
+}
 .suporte{
     margin-top: 75px;
     justify-content: center;
-    margin-left: 41%;
+    margin-left: 43%;
     
 }
 button{
@@ -58,76 +69,12 @@ main{
     margin-right: 25px;
 }
 
-header{
-    background-color:red;
-}
-nav{
-    width: 100%;
-}
-.container-footer{
-
-    display: flex;
-    justify-content:center;
-    padding-top: 5%;
-    height: 50%;
-    background-color: #E0E3E5;
-    gap: 60px;
-    padding: 20px;
-}
-
-.links-footer i{
-    width: 42px;
-}
-
-.paragrafo-footer{
-    font-size: 15px;
-}
-
-.ancora-footer{
-    text-decoration: none;
-    color: black;
-}
-
-.titulo-footer{
-    font-size: 24px;
-    text-decoration: none;
-
-}
-
-.contato-footer{
-    display: flex;
-
-    text-align: center;
-    justify-content: center;
-    background: #E0E3E5;
-    gap: 20px;
-    padding: 10px;
-}
-.contato-footer i{
-    font-family: 'Poppins',sans-serif;
-}
-
-.copyright{
-    display: flex;
-    justify-content: center;
-    color: white;
-    background-color: #02383C;
-}
-.copyright p{
-    display: flex;
-    justify-content: center;
-    padding-top: 18px;
-    font-size: 12px;
-}
-
-
-
-
-
-
-
 
 @media screen and (max-width: 760px){
+    .chat-icon {
+        bottom: 10px; /* ajuste para telas menores */
+        right: 10px; /* ajuste para telas menores */
+    }
     .subpainel {
         width: 100%; /* Altera a largura para ocupar toda a largura disponível */
     }
