--- a/contato.css
+++ b/contato.css
@@ -1,111 +1,238 @@
-*{
+código
+* {
+    margin: 0;
     padding: 0;
-    margin: auto;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-  }
-  
-  body {
-    
-    
-    width: 1630px; 
-    height: 1500px;
-    font-family: sans-serif;
-    margin: 0px;
-    padding: 0px;
-    background-color: #f4f4f4;
-    
-  }
-  
-  .container-main {
+    list-style: none;
+}
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    background-color:#02383C;
+}
+
+.cor-hamburguer {
     display: flex;
-    justify-content:center;
-    padding-top: 5%;
-    height: 50%;
-    background-color: #E0E3E5;
-    gap: 60px;
-    padding: 20px;
-    
-  }
-  
-  .formulario {
-    background-color: #627254;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    margin: 50px;
-    padding: 1%;
-  
-    width: 500px; 
-    height: 625px;
-    
-  }
-  .flex {
-    padding: 3%;
-    display: flex;
-    text-align: center;
-    justify-content: space-around;
-    align-content: center;
+    justify-content: center;
     align-items: center;
+    background-color:#02383C
 
-  }
-  
-  .principal {
-    
-    margin: 0%;
-    margin-bottom: 2%;
-  }
+}
 
-  .mapa{
+/* ESTILO DO MENU HAMBURGUER */
 
-    width: 500px;
-    height: 500px;
-  }
-  
-  form {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .form-group {
-    margin-bottom: 15px;
-  }
-  
-  label {
+.menu {
+    margin-left: 30px;
+    margin-top: -40px;
+}
+
+.menu .menu-faketrigger {
+    position: absolute;
+    z-index: 1000;
+    height: 35px;
+    width: 35px;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.menu .menu-faketrigger:checked~ul {
+    background-color: #fff;
+}
+
+
+.menu .menu-lines {
+    position: absolute;
+    z-index: 999;
+    width: 35px;
+    height: 35px;
+}
+
+.menu .menu-lines span {
     display: block;
-    margin-bottom: 5px;
-  }
-  
-  input,
-  textarea {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  
-  textarea {
-    height: 100px;
-    resize: vertical;
-  }
-  
-  button {
+    width: 35px;
+    height: 5px;
+    margin-bottom: 10px;
+    background-color: #fff;
+    border-radius: 3px;
+    transition: all ease .2s;
+}
+
+.menu .menu-faketrigger:checked~.menu-lines span {
     background-color: #02383C;
-    color: #fff;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-    transition: background-color 0.3s;
-  }
+}
+
+.menu .menu-faketrigger:checked~.menu-lines span:nth-child(1) {
+    transform-origin: 0% 0%;
+    transform: rotate(45deg) scaleX(1.25);
+}
+
+.menu .menu-faketrigger:checked~.menu-lines span:nth-child(2) {
+    opacity: 0;
+}
+
+.menu .menu-faketrigger:checked~.menu-lines span:nth-child(3) {
+    transform-origin: 0% 100%;
+    transform: rotate(-45deg) scaleX(1.25);
+}
+
+.menu ul {
+    position: absolute;
+    z-index: 998;
+    left: 0;
+    top: 0;
+    width: 300px;
+    height: calc(100vh - 100px);
+    padding-top: 50px;
+    background-color: #fff;
+    margin-left: -300px;
+    transition: all ease .2s;
+}
+
+.menu .menu-faketrigger:checked~ul {
+    margin-left: 0;
+
+}
+
+.menu ul li {
+    margin-top: 30px;
+    padding: 0px 30px;
+}
+
+.menu ul li a {
+    text-decoration: none;
+    color: #000;
+    font-size: 22px;
+    transition: all ease .3s;
+
+}
+
+.menu ul li a:hover {
+    color: #999;
+}
+
+/* ESTILO DO SEARCH BAR */
+
+.search-container {
+    height: 40px;
+    width: 490px;
+    margin: 0 auto;
+}
+
+input#search-bar {
+    width: 100%;
+    height: 45px;
+    padding: 0 20px;
+    font-size: 1rem;
+    border: 1px solid #D0CFCE;
+    outline: none;
+    border-radius: 10px;
+}
+
+.search-icon {
+    position: relative;
+    float: right;
+    width: 75px;
+    height: 75px;
+    top: -62px;
+    right: -45px;
+}
+
+/* ESTILO DOS ICONES */
+
+.icones-nav {
+    display: flex;
+    align-items: center;
+    margin: 20px;
+    gap: 20px;
+}
+
+.icones-nav img {
+    width: 30px;
+    height: 30px;
+
+}
+.container-main {
+  background-color: #FFFFFF;
+  display: flex; 
+  grid-gap: 20rem; 
+  justify-content: center; 
+  flex-direction: row; 
+  padding-top: 2.5%;
+  height: 50rem;
+
   
-  button:hover {
-    background-color: #2bb5be;
-  }
+}
+
+.mapa{
+  display: flex;
+  padding-top: 5rem;
+ justify-content: center;
   
+ 
+}
+
+.formulario {
+
+  margin: 10px;
+  padding: 80px;
+  width: 550px;
+  height: 650px;
+  background-color: #627254;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+
+}
+
+.principal {
   
-  
-  
-  
-  
-  .container-footer{
+  margin: 0%;
+  margin-bottom: 2%;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-group {
+  margin-bottom: 15px;
+}
+
+label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+input,
+textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+textarea {
+  height: 100px;
+  resize: vertical;
+}
+
+button {
+  background-color: #02383C;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  transition: background-color 0.3s;
+}
+
+button:hover {
+  background-color: #2bb5be;
+}
+
+
+
+
+
+
+.container-footer{
 
     display: flex;
     justify-content:center;
