--- a/login.css
+++ b/login.css
@@ -80,6 +80,11 @@ h2{
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.7);
 }
 
+.feedback{
+    color: red;
+    display: none;
+}
+
 p{
     font-size: 14px;
     margin: 10% auto 5px;
@@ -145,55 +150,6 @@ label{
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.7);
 }
 /*modal*/
-
-/* FOOTER */
-.container-footer{
-    display: flex;
-    justify-content:center;
-    padding-top: 5%;
-    height: 50%;
-    background-color: #E0E3E5;
-    gap: 60px;
-    padding: 20px;
-}
-.links-footer i{
-    width: 42px;
-}
-.paragrafo-footer{
-    font-size: 15px;
-}
-.ancora-footer{
-    text-decoration: none;
-    color: black;
-}
-.titulo-footer{
-    font-size: 24px;
-    text-decoration: none;
-}
-.contato-footer{
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    background: #E0E3E5;
-    gap: 20px;
-    padding: 10px;
-}
-.contato-footer i{
-    font-family: 'Poppins',sans-serif;
-}
-.copyright{
-    display: flex;
-    justify-content: center;
-    color: white;
-    background-color: #02383C;
-}
-.copyright p{
-    display: flex;
-    justify-content: center;
-    padding-top: 18px;
-    font-size: 12px;
-}
-/* FOOTER */
 
 
 
